# one-page-site

./: README.md  db.sqlite3  pyproject.toml
news/: models.py  urls.py  views.py
news/migrations/: 0002_phonesofclient.py
news/static/news/css/: script.js  style.css
news/templates/news/: index.html
